--- a/meal-cards/breakfast.html
+++ b/meal-cards/breakfast.html
@@ -16,8 +16,8 @@
 
     <a class="pages" href="./Recipes/breakfast-recipes/avocado-toast.html">
     <div class="left cards">
-        <a class="pages" href="./Recipes/breakfast-recipes/avocado-toast.html">
-            <img class="tilte-img" src="./assets/breakfast-pictures/Avocado toast.webp" alt="picture of Avocado toast">
+        <a class="pages" href="/Recipes/breakfast-recipes/avocado-toast.html">
+            <img class="tilte-img" src="../assets/breakfast-pictures/Avocado toast.webp" alt="picture of Avocado toast">
             <h2 class="tag">Avocado Toast</h2>
         </a>
     </div></a>
@@ -30,7 +30,7 @@
 
     <a class="pages" href="./Recipes/breakfast-recipes/breakfast-smoothie.html">
     <div class="left cards">
-        <img class="tilte-img" src="./assets/breakfast-pictures/breakfast smoothie.webp" alt="picture of a breakfast smoothie">
+        <img class="tilte-img" src="../assets/breakfast-pictures/breakfast smoothie.webp" alt="picture of a breakfast smoothie">
         <h2 class="tag">Breakfast Smoothie</h2>
     </div></a>
 
