--- a/meal-cards/breakfast.html
+++ b/meal-cards/breakfast.html
@@ -24,7 +24,7 @@
 
     <a class="pages" href="./Recipes/breakfast-recipes/banana-muf.html">
     <div class="right cards">
-        <img class="tilte-img" src="./assets/breakfast-pictures/banana muf.webp" alt="picture of banana muffins>">
+        <img class="tilte-img" src="../assets/breakfast-pictures/banana muf.webp" alt="picture of banana muffins>">
         <h2 class="tag">Banana Muffins</h2>
     </div></a>
 
@@ -36,37 +36,37 @@
 
     <a class="pages" href="./Recipes/breakfast-recipes/b"></a>
     <div class="right cards">
-        <img class="tilte-img" src="./assets/breakfast-pictures/breakfast-egg-wraps-c0880fe.webp" alt="breakfast wrap picture">
+        <img class="tilte-img" src="../assets/breakfast-pictures/breakfast-egg-wraps-c0880fe.webp" alt="breakfast wrap picture">
         <h2 class="tag">Breakfast egg wraps</h2>
     </div>
 
     <a class="pages" href="./Recipes/breakfast-recipes/cheese-omelette.html">
     <div class="left cards">
-        <img class="tilte-img" src="./assets/breakfast-pictures/Cheese-omelette-45155e3.webp" alt="picture of Chee>se-omelette">
+        <img class="tilte-img" src="../assets/breakfast-pictures/Cheese-omelette-45155e3.webp" alt="picture of Chee>se-omelette">
         <h2 class="tag">Cheese Omelette</h2>
     </div></a>
 
     <a class="pages" href="./Recipes/breakfast-recipes/full-amer.html">
     <div class="right cards">
-        <img class="tilte-img" src="./assets/breakfast-pictures/full-amer.webp" alt="picture of a full american breakfast ">
+        <img class="tilte-img" src="../assets/breakfast-pictures/full-amer.webp" alt="picture of a full american breakfast ">
         <h2 class="tag">full american breakfast</h2>
     </div></a>
 
     <a class="pages" href="/Recipes/breakfast-recipes/full-english.html">
     <div class="left cards">
-        <img class="tilte-img" src="./assets/breakfast-pictures/full-eng.webp" alt="picture of a full english breakfast">
+        <img class="tilte-img" src="../assets/breakfast-pictures/full-eng.webp" alt="picture of a full english breakfast">
         <h2 class="tag">Full english breakfast</h2>
     </div></a>
 
     <a class="pages" href="./Recipes/breakfast-recipes/granola.html">
     <div class="right cards">
-        <img class="tilte-img" src="./assets/breakfast-pictures/Homemade granola.webp" alt="picture of Homemade granola">
+        <img class="tilte-img" src="../assets/breakfast-pictures/Homemade granola.webp" alt="picture of Homemade granola">
         <h2 class="tag">homemade granola</h2>
     </div></a>
 
     <a class="pages" href="./Recipes/breakfast-recipes/pancakes.html">
     <div class="left cards">
-        <img class="tilte-img" src="./assets/breakfast-pictures/pancakes.webp" alt="picture of pancakes">
+        <img class="tilte-img" src="../assets/breakfast-pictures/pancakes.webp" alt="picture of pancakes">
         <h2 class="tag">pancakes</h2>
     </div></a>
 
