--- a/meal-cards/breakfast.html
+++ b/meal-cards/breakfast.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>breakfast</title>
-    <link href="../styles.css" rel="stylesheet" />
+    <link href="./styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="./assets/logo-icon/favicon.ico.png"/>
 </head>
 
@@ -14,7 +14,7 @@
         <h1> Breakfast </h1>
     </div>
 
-    <a class="pages" href="../Recipes/breakfast-recipes/avocado-toast.html">
+    <a class="pages" href="./Recipes/breakfast-recipes/avocado-toast.html">
     <div class="left cards">
         <a class="pages" href="../Recipes/breakfast-recipes/avocado-toast.html">
             <img class="tilte-img" src="../assets/breakfast-pictures/Avocado toast.webp" alt="picture of Avocado toast">
