--- a/Recipes/breakfast-recipes/avocado-toast.html
+++ b/Recipes/breakfast-recipes/avocado-toast.html
@@ -6,12 +6,12 @@
     <meta charset="UTF-8">
     <title>breakfast</title>
     <link href="../styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="../assets/logo-icon/favicon.ico.png"/>
+    <link rel="icon" type="image/png" href="./assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
     <div class="head">
-            <img class="tilte-img" src="../assets/breakfast-pictures/Avocado toast.webp" alt="picture of Avocado toast">
+            <img class="tilte-img" src="./assets/breakfast-pictures/Avocado toast.webp" alt="picture of Avocado toast">
             <h2>Avocado Toast</h2>
     </div>
 
