--- a/Recipes/breakfast-recipes/avocado-toast.html
+++ b/Recipes/breakfast-recipes/avocado-toast.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="head">
-            <img class="tilte-img" src="./assets/breakfast-pictures/Avocado toast.webp" alt="picture of Avocado toast">
+            <img class="tilte-img" src="../assets/breakfast-pictures/Avocado toast.webp" alt="picture of Avocado toast">
             <h2>Avocado Toast</h2>
     </div>
 
