--- a/Recipes/breakfast-recipes/avocado-toast.html
+++ b/Recipes/breakfast-recipes/avocado-toast.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <title>breakfast</title>
-    <link href="/styles.css" rel="stylesheet" />
+    <link href="./styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="./assets/logo-icon/favicon.ico.png"/>
 </head>
 
