--- a/meal-cards/breakfast.html
+++ b/meal-cards/breakfast.html
@@ -22,7 +22,7 @@
         </a>
     </div></a>
 
-    <a class="pages" href="./Recipes/breakfast-recipes/banana-muf.html">
+    <a class="pages" href="../Recipes/breakfast-recipes/banana-muf.html">
     <div class="right cards">
         <img class="tilte-img" src="../assets/breakfast-pictures/banana muf.webp" alt="picture of banana muffins>">
         <h2 class="tag">Banana Muffins</h2>
