--- a/meal-cards/breakfast.html
+++ b/meal-cards/breakfast.html
@@ -30,9 +30,11 @@
 
     <a class="pages" href="./Recipes/breakfast-recipes/breakfast-smoothie.html">
     <div class="left cards">
+         <a class="pages" href="./Recipes/breakfast-recipes/breakfast-smoothie.html">
         <img class="tilte-img" src="../assets/breakfast-pictures/breakfast smoothie.webp" alt="picture of a breakfast smoothie">
         <h2 class="tag">Breakfast Smoothie</h2>
-    </div></a>
+         </a>
+    </div>
 
     <a class="pages" href="./Recipes/breakfast-recipes/b"></a>
     <div class="right cards">
