--- a/meal-cards/breakfast.html
+++ b/meal-cards/breakfast.html
@@ -28,9 +28,9 @@
         <h2 class="tag">Banana Muffins</h2>
     </div></a>
 
-    <a class="pages" href="./Recipes/breakfast-recipes/breakfast-smoothie.html">
+   
     <div class="left cards">
-         <a class="pages" href="./Recipes/breakfast-recipes/breakfast-smoothie.html">
+         <a class="pages" href="../Recipes/breakfast-recipes/breakfast-smoothie.html">
         <img class="tilte-img" src="../assets/breakfast-pictures/breakfast smoothie.webp" alt="picture of a breakfast smoothie">
         <h2 class="tag">Breakfast Smoothie</h2>
          </a>
