Href & src links updated

--- a/meal-cards/breakfast.html
+++ b/meal-cards/breakfast.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <title>breakfast</title>
-    <link href="./styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="./assets/logo-icon/favicon.ico.png"/>
+    <link href="../styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="../assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
@@ -14,65 +14,63 @@
         <h1> Breakfast </h1>
     </div>
 
-    <a class="pages" href="/Recipes/breakfast-recipes/avocado-toast.html">
+    <a class="pages" href="../Recipes/breakfast-recipes/avocado-toast.html">
     <div class="left cards">
-        <a class="pages" href="./Recipes/breakfast-recipes/avocado-toast.html">
-            <img class="tilte-img" src="./assets/breakfast-pictures/Avocado toast.webp" alt="picture of Avocado toast">
+            <img class="tilte-img" src="../assets/breakfast-pictures/Avocado toast.webp" alt="picture of Avocado toast">
             <h2 class="tag">Avocado Toast</h2>
-        </a>
     </div></a>
 
-    <a class="pages" href="/Recipes/breakfast-recipes/banana-muf.html">
+    <a class="pages" href="../Recipes/breakfast-recipes/banana-muf.html">
     <div class="right cards">
-        <img class="tilte-img" src="./assets/breakfast-pictures/banana muf.webp" alt="picture of banana muffins>">
+        <img class="tilte-img" src="../assets/breakfast-pictures/banana muf.webp" alt="picture of banana muffins>">
         <h2 class="tag">Banana Muffins</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/breakfast-recipes/breakfast-smoothie.html">
+    <a class="pages" href="../Recipes/breakfast-recipes/breakfast-smoothie.html">
     <div class="left cards">
-        <img class="tilte-img" src="./assets/breakfast-pictures/breakfast smoothie.webp" alt="picture of a breakfast smoothie">
+        <img class="tilte-img" src="../assets/breakfast-pictures/breakfast smoothie.webp" alt="picture of a breakfast smoothie">
         <h2 class="tag">Breakfast Smoothie</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/breakfast-recipes/b"></a>
+    <a class="pages" href="../Recipes/breakfast-recipes/b"></a>
     <div class="right cards">
-        <img class="tilte-img" src="./assets/breakfast-pictures/breakfast-egg-wraps-c0880fe.webp" alt="breakfast wrap picture">
+        <img class="tilte-img" src="../assets/breakfast-pictures/breakfast-egg-wraps-c0880fe.webp" alt="breakfast wrap picture">
         <h2 class="tag">Breakfast egg wraps</h2>
     </div>
 
-    <a class="pages" href="/Recipes/breakfast-recipes/cheese-omelette.html">
+    <a class="pages" href="../Recipes/breakfast-recipes/cheese-omelette.html">
     <div class="left cards">
-        <img class="tilte-img" src="./assets/breakfast-pictures/Cheese-omelette-45155e3.webp" alt="picture of Chee>se-omelette">
+        <img class="tilte-img" src="../assets/breakfast-pictures/Cheese-omelette-45155e3.webp" alt="picture of Chee>se-omelette">
         <h2 class="tag">Cheese Omelette</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/breakfast-recipes/full-amer.html">
+    <a class="pages" href="../Recipes/breakfast-recipes/full-amer.html">
     <div class="right cards">
-        <img class="tilte-img" src="./assets/breakfast-pictures/full-amer.webp" alt="picture of a full american breakfast ">
+        <img class="tilte-img" src="../assets/breakfast-pictures/full-amer.webp" alt="picture of a full american breakfast ">
         <h2 class="tag">full american breakfast</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/breakfast-recipes/full-english.html">
+    <a class="pages" href="../Recipes/breakfast-recipes/full-english.html">
     <div class="left cards">
-        <img class="tilte-img" src="./assets/breakfast-pictures/full-eng.webp" alt="picture of a full english breakfast">
+        <img class="tilte-img" src="../assets/breakfast-pictures/full-eng.webp" alt="picture of a full english breakfast">
         <h2 class="tag">Full english breakfast</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/breakfast-recipes/granola.html">
+    <a class="pages" href="../Recipes/breakfast-recipes/granola.html">
     <div class="right cards">
-        <img class="tilte-img" src="./assets/breakfast-pictures/Homemade granola.webp" alt="picture of Homemade granola">
+        <img class="tilte-img" src="../assets/breakfast-pictures/Homemade granola.webp" alt="picture of Homemade granola">
         <h2 class="tag">homemade granola</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/breakfast-recipes/pancakes.html">
+    <a class="pages" href="../Recipes/breakfast-recipes/pancakes.html">
     <div class="left cards">
-        <img class="tilte-img" src="./assets/breakfast-pictures/pancakes.webp" alt="picture of pancakes">
+        <img class="tilte-img" src="../assets/breakfast-pictures/pancakes.webp" alt="picture of pancakes">
         <h2 class="tag">pancakes</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/breakfast-recipes/french-toast.html">
+    <a class="pages" href="../Recipes/breakfast-recipes/french-toast.html">
     <div class="right cards">
-        <img class="tilte-img" src="./assets/breakfast-pictures/Peanut-butter-stuffed-French-toast-e119754.webp" alt="picture of peanut buttr french toast">
+        <img class="tilte-img" src="../assets/breakfast-pictures/Peanut-butter-stuffed-French-toast-e119754.webp" alt="picture of peanut buttr french toast">
         <h2 class="tag">peanut butter stuffed French toast</h2>
     </div></a>
 
