--- a/meal-cards/lunch.html
+++ b/meal-cards/lunch.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>lunch</title>
-    <link href="./styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="./assets/logo-icon/favicon.ico.png"/>
+    <link href="../styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="../assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
@@ -13,63 +13,63 @@
         <h1> Lunch </h1>
     </div>
 
-    <a class="pages" href="/Recipes/lunch-recipes/bento-box.html">
+    <a class="pages" href="../Recipes/lunch-recipes/bento-box.html">
     <div class="left cards">
-        <img class="tilte-img" src="./assets/lunch-pictures/bento box.webp" alt="picture of a bento box">
+        <img class="tilte-img" src="../assets/lunch-pictures/bento box.webp" alt="picture of a bento box">
         <h2 class="tag">bento box</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/lunch-recipes/burrito-bowl.html">
+    <a class="pages" href="../Recipes/lunch-recipes/burrito-bowl.html">
     <div class="right cards">
-        <img class="tilte-img" src="./assets/lunch-pictures/burrito bowl.webp" alt="picture of a burrito bowl">
+        <img class="tilte-img" src=".../assets/lunch-pictures/burrito bowl.webp" alt="picture of a burrito bowl">
         <h2 class="tag">burrito bowl</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/lunch-recipes/chicken-burgar.html">
+    <a class="pages" href="../Recipes/lunch-recipes/chicken-burgar.html">
     <div class="left cards">
-        <img class="tilte-img" src="./assets/lunch-pictures/chicken burgar.webp" alt="picture of a chicken burgar">
+        <img class="tilte-img" src="../assets/lunch-pictures/chicken burgar.webp" alt="picture of a chicken burgar">
         <h2 class="tag">chicken burgar</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/lunch-recipes/fettuccine-al-bur.html">
+    <a class="pages" href="../Recipes/lunch-recipes/fettuccine-al-bur.html">
     <div class="right cards">
-        <img class="tilte-img" src="./assets/lunch-pictures/fettuccine al-burro.webp" alt="picture of fettuccine">
+        <img class="tilte-img" src="../assets/lunch-pictures/fettuccine al-burro.webp" alt="picture of fettuccine">
         <h2 class="tag">fettuccine al-burro</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/lunch-recipes/fried-ramen.html">
+    <a class="pages" href="../Recipes/lunch-recipes/fried-ramen.html">
     <div class="left cards">
-        <img class="tilte-img" src="./assets/lunch-pictures/friedd  ramen noodles.webp" alt="picture of ramen noodles">
+        <img class="tilte-img" src="../assets/lunch-pictures/friedd  ramen noodles.webp" alt="picture of ramen noodles">
         <h2 class="tag">ramen noodles</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/lunch-recipes/grilled-cheese.html">
+    <a class="pages" href="../Recipes/lunch-recipes/grilled-cheese.html">
     <div class="right cards">
-        <img class="tilte-img" src="./assets/lunch-pictures/grilled cheese.webp" alt="picture of grilled cheese">
+        <img class="tilte-img" src="../assets/lunch-pictures/grilled cheese.webp" alt="picture of grilled cheese">
         <h2 class="tag">grilled cheese</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/lunch-recipes/hush-puppies.html">
+    <a class="pages" href="../Recipes/lunch-recipes/hush-puppies.html">
     <div class="left cards">
-        <img class="tilte-img" src="./assets/lunch-pictures/hush puppies.webp" alt="picture of hush puppies">
+        <img class="tilte-img" src="../assets/lunch-pictures/hush puppies.webp" alt="picture of hush puppies">
         <h2 class="tag">hush puppies</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/lunch-recipes/italian-beef.html">
+    <a class="pages" href="../Recipes/lunch-recipes/italian-beef.html">
     <div class="right cards">
-        <img class="tilte-img" src="./assets/lunch-pictures/itialian beef.webp" alt="a picture of itialian beef">
+        <img class="tilte-img" src="../assets/lunch-pictures/itialian beef.webp" alt="a picture of itialian beef">
         <h2 class="tag">itialian beef</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/lunch-recipes/pad-thai.html">
+    <a class="pages" href="../Recipes/lunch-recipes/pad-thai.html">
     <div class="left cards">
-        <img class="tilte-img" src="./assets/lunch-pictures/pad thai.webp" alt="picture of pad thai">
+        <img class="tilte-img" src="../assets/lunch-pictures/pad thai.webp" alt="picture of pad thai">
         <h2 class="tag">pad thai</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/lunch-recipes/steak&eggs.html">
+    <a class="pages" href="../Recipes/lunch-recipes/steak&eggs.html">
     <div class="right cards">
-        <img class="tilte-img" src="./assets/lunch-pictures/steak and eggs.webp" alt="picture of steak and eggs">
+        <img class="tilte-img" src="../assets/lunch-pictures/steak and eggs.webp" alt="picture of steak and eggs">
         <h2 class="tag">Steak and eggs</h2>
     </div></a>
 
