--- a/meal-cards/dessert.html
+++ b/meal-cards/dessert.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Dessert</title>
-    <link href="./styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="./assets/logo-icon/favicon.ico.png"/>
+    <link href="../styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="../assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
@@ -13,63 +13,63 @@
         <h1> Dessert </h1>
     </div>
 
-    <a class="pages" href="/Recipes/dessert-recipes/berries&cream-Bars.html">
+    <a class="pages" href="../Recipes/dessert-recipes/berries&cream-Bars.html">
     <div class="left cards">
-        <img class="tilte-img" src="./assets/dessert-pictures/Berries-and-Cream Bars.webp" alt="picture of berries and cream bars">
+        <img class="tilte-img" src="../assets/dessert-pictures/Berries-and-Cream Bars.webp" alt="picture of berries and cream bars">
         <h2 class="tag">berries and cream bars</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/dessert-recipes/Cheescake-brownies.html">
+    <a class="pages" href="../Recipes/dessert-recipes/Cheescake-brownies.html">
     <div class="right cards">
-        <img class="tilte-img" src="./assets/dessert-pictures/Blackberry Cheesecake Brownies.webp" alt="picture of BLackberry cheesecake Brownies<">
+        <img class="tilte-img" src="../assets/dessert-pictures/Blackberry Cheesecake Brownies.webp" alt="picture of BLackberry cheesecake Brownies<">
         <h2 class="tag">BLackberry cheesecake Brownies</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/dessert-recipes/brownies.html">
+    <a class="pages" href="../Recipes/dessert-recipes/brownies.html">
     <div class="left cards">
-        <img class="tilte-img" src="./assets/dessert-pictures/brownies.webp" alt="picture of Brownies">
+        <img class="tilte-img" src="../assets/dessert-pictures/brownies.webp" alt="picture of Brownies">
         <h2 class="tag">Brownies</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/dessert-recipes/choc-chip-bars.html">
+    <a class="pages" href="../Recipes/dessert-recipes/choc-chip-bars.html">
     <div class="right cards">
-        <img class="tilte-img" src="./assets/dessert-pictures/Chocolate Chip Cookie Millionaire Bars.webp" alt="picture of chocolate chip cookies bars">
+        <img class="tilte-img" src="../assets/dessert-pictures/Chocolate Chip Cookie Millionaire Bars.webp" alt="picture of chocolate chip cookies bars">
         <h2 class="tag">chocolate chip cookies bars</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/dessert-recipes/choc-chip-cookies.html">
+    <a class="pages" href="../Recipes/dessert-recipes/choc-chip-cookies.html">
     <div class="left cards">
-        <img class="tilte-img" src="./assets/dessert-pictures/chocolate chip cookies.jpg" alt="picture of chocolate chip cookies">
+        <img class="tilte-img" src="../assets/dessert-pictures/chocolate chip cookies.jpg" alt="picture of chocolate chip cookies">
         <h2 class="tag">chocolate chip cookies</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/dessert-recipes/ice-cream.html">
+    <a class="pages" href="../Recipes/dessert-recipes/ice-cream.html">
     <div class="right cards">
-        <img class="tilte-img" src="./assets/dessert-pictures/ice cream.jpg" alt="picture of ice cream">
+        <img class="tilte-img" src="../assets/dessert-pictures/ice cream.jpg" alt="picture of ice cream">
         <h2 class="tag">ice cream</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/dessert-recipes/malva-pudding.html">
+    <a class="pages" href="../Recipes/dessert-recipes/malva-pudding.html">
     <div class="left cards">
-        <img class="tilte-img" src="./assets/dessert-pictures/Malva Pudding.jpg" alt="picture of malva pudding">
+        <img class="tilte-img" src="../assets/dessert-pictures/Malva Pudding.jpg" alt="picture of malva pudding">
         <h2 class="tag">malva pudding</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/dessert-recipes/milktert.html">
+    <a class="pages" href="../Recipes/dessert-recipes/milktert.html">
     <div class="right cards">
-        <img class="tilte-img" src="./assets/dessert-pictures/milktert.jpg" alt="picture of milktert">
+        <img class="tilte-img" src="../assets/dessert-pictures/milktert.jpg" alt="picture of milktert">
         <h2 class="tag">milktert</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/dessert-recipes/nutella-bars.html">
+    <a class="pages" href="../Recipes/dessert-recipes/nutella-bars.html">
     <div class="left cards">
-        <img class="tilte-img" src="./assets/dessert-pictures/Nutella Swirl Cheesecake Bars.webp" alt="picture of Nutella Swirl Cheesecake bars">
+        <img class="tilte-img" src="../assets/dessert-pictures/Nutella Swirl Cheesecake Bars.webp" alt="picture of Nutella Swirl Cheesecake bars">
         <h2 class="tag">Nutella swirl cheesecake bars</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/dessert-recipes/salted-c-bars.html">
+    <a class="pages" href="../Recipes/dessert-recipes/salted-c-bars.html">
     <div class="right cards">
-        <img class="tilte-img" src="./assets/dessert-pictures/Salted Caramel Ritz Cookies.webp" alt="picture of salted caramel ritz">
+        <img class="tilte-img" src="../assets/dessert-pictures/Salted Caramel Ritz Cookies.webp" alt="picture of salted caramel ritz">
         <h2 class="tag">salted caramel ritz cookies</h2>
     </div></a>
 
