files moved for pathing correction

--- a/Recipe-finder/index.html
+++ b/Recipe-finder/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <title>Recipe Finder</title>
     <link href="./styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="./assets/logo-icon/favicon.ico.png"/>
+    <link rel="icon" type="image/png" href="../assets/logo-icon/favicon.icon-bg.png" />
 </head>
 <body>
     <div class="head">
-        <img class="logo" src="./assets/logo-icon/favicon,icon-bg.png" alt="logo of webpage" />
+        <img class="logo" src="./assets/logo-icon/favicon.icon-bg.png" alt="logo of webpage" />
         <h1 class="heading">Recipe Frinder</h1>
     </div>
 
