--- a/Recipe-finder/meal-cards/breakfast.html
+++ b/Recipe-finder/meal-cards/breakfast.html
@@ -14,10 +14,10 @@
         <h1> Breakfast </h1>
     </div>
 
-    <a class="pages" href="../Recipes/breakfast-recipes/avocado-toast.html">
+    <a class="pages" href="./Recipes/breakfast-recipes/avocado-toast.html">
     <div class="left cards">
         <a class="pages" href="../Recipes/breakfast-recipes/avocado-toast.html">
-            <img class="tilte-img" src="../assets/breakfast-pictures/Avocado toast.webp" alt="picture of Avocado toast">
+            <img class="tilte-img" src="../assets/breakfast-pictures/Avocado-toast.webp" alt="picture of Avocado toast">
             <h2 class="tag">Avocado Toast</h2>
     </div></a>
 
