--- a/Recipe-finder/Recipes/breakfast-recipes/banana-muf.html
+++ b/Recipe-finder/Recipes/breakfast-recipes/banana-muf.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <title>breakfast</title>
-    <link href="/styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="/assets/logo-icon/favicon.ico.png"/>
+    <link href="/Recipe-finder/styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="/Recipe-finder/assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
     <div class="head">
-            <img class="tilte-img" src="/assets/breakfast-pictures/banana muf.webp" alt="picture of Avocado toast">
+            <img class="tilte-img" src="/Recipe-finder/assets/breakfast-pictures/banana muf.webp" alt="picture of Avocado toast">
             <h2>Banana blueberry muffins</h2>
     </div>
 
