--- a/Recipe-finder/Recipes/dessert-recipes/choc-chip-bars.html
+++ b/Recipe-finder/Recipes/dessert-recipes/choc-chip-bars.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <title>dessert</title>
-    <link href="/styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="/assets/logo-icon/favicon.ico.png"/>
+    <link href="/Recipe-finder/styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="/Recipe-finder/assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
     <div class="head">
-            <img class="tilte-img" src="/assets/dessert-pictures/Chocolate Chip Cookie Millionaire Bars.webp" alt="picture of Chocolate chip cookies bars">
+            <img class="tilte-img" src="/Recipe-finder/assets/dessert-pictures/Chocolate Chip Cookie Millionaire Bars.webp" alt="picture of Chocolate chip cookies bars">
             <h2 class="tag">Chocolate chip cookies bars</h2>
     </div>
 
