--- a/Recipe-finder/meal-cards/lunch.html
+++ b/Recipe-finder/meal-cards/lunch.html
@@ -21,7 +21,7 @@
 
     <a class="pages" href="../Recipes/lunch-recipes/burrito-bowl.html">
     <div class="right cards">
-        <img class="tilte-img" src=".../assets/lunch-pictures/burrito bowl.webp" alt="picture of a burrito bowl">
+        <img class="tilte-img" src="../assets/lunch-pictures/burrito bowl.webp" alt="picture of a burrito bowl">
         <h2 class="tag">burrito bowl</h2>
     </div></a>
 
