--- a/Recipe-finder/Recipes/breakfast-recipes/french-toast.html
+++ b/Recipe-finder/Recipes/breakfast-recipes/french-toast.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <title>breakfast</title>
-    <link href="/styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="/assets/logo-icon/favicon.ico.png"/>
+    <link href="/Recipe-finder/styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="/Recipe-finder/assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
     <div class="head">
-            <img class="tilte-img" src="/assets/breakfast-pictures/Peanut-butter-stuffed-French-toast-e119754.webp" alt="picture of peanut butter stuffed french toast">
+            <img class="tilte-img" src="/Recipe-finder/assets/breakfast-pictures/Peanut-butter-stuffed-French-toast-e119754.webp" alt="picture of peanut butter stuffed french toast">
             <h2 class="tag">peanut butter stuffed french toast</h2>
     </div>
 
