--- a/Recipe-finder/Recipes/dessert-recipes/malva-pudding.html
+++ b/Recipe-finder/Recipes/dessert-recipes/malva-pudding.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <title>dessert</title>
-    <link href="/styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="/assets/logo-icon/favicon.ico.png"/>
+    <link href="/Recipe-finder/styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="/Recipe-finder/assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
     <div class="head">
-            <img class="tilte-img" src="/assets/dessert-pictures/Malva Pudding.jpg" alt="picture of malva pudding">
+            <img class="tilte-img" src="/Recipe-finder/assets/dessert-pictures/Malva Pudding.jpg" alt="picture of malva pudding">
             <h2 class="tag">malva pudding</h2>
     </div>
 
