--- a/Recipe-finder/Recipes/dinner-recipes/mongolian-beef.html
+++ b/Recipe-finder/Recipes/dinner-recipes/mongolian-beef.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <title>dinner</title>
-    <link href="/styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="/assets/logo-icon/favicon.ico.png"/>
+    <link href="/Recipe-finder/styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="/Recipe-finder/assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
     <div class="head">
-            <img class="tilte-img" src="/assets/dinner-picture/Mongolian beef.jpg" alt="picture of mongolian beef">
+            <img class="tilte-img" src="/Recipe-finder/assets/dinner-picture/Mongolian beef.jpg" alt="picture of mongolian beef">
             <h2 class="tag">mongolian beef</h2>
     </div>
 
