--- a/Recipe-finder/Recipes/lunch-recipes/italian-beef.html
+++ b/Recipe-finder/Recipes/lunch-recipes/italian-beef.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <title>lunch</title>
-    <link href="/styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="/assets/logo-icon/favicon.ico.png"/>
+    <link href="/Recipe-finder/styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="/Recipe-finder/assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
     <div class="head">
-            <img class="tilte-img" src="/assets/lunch-pictures/itialian beef.webp" alt="picture of itialian beef">
+            <img class="tilte-img" src="/Recipe-finder/assets/lunch-pictures/itialian beef.webp" alt="picture of itialian beef">
             <h2 class="tag">italian beef</h2>
     </div>
 
