--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Recipe Finder</title>
-    <link href="../Recipe-finder/styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="../Recipe-finder/assets/logo-icon/favicon.icon-bg.png" />
+    <link href="Recipe-finder/styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="Recipe-finder/assets/logo-icon/favicon.icon-bg.png" />
 </head>
 <body>
     <div class="head">
