--- a/meal-cards/dinner.html
+++ b/meal-cards/dinner.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Dinner</title>
-    <link href="/styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="/assets/logo-icon/favicon.ico.png"/>
+    <link href="../styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="../assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
@@ -13,61 +13,61 @@
         <h1> Dinner </h1>
     </div>
 
-    <a class="pages" href="/Recipes/dinner-recipes/bibimbap.html">
+    <a class="pages" href="../Recipes/dinner-recipes/bibimbap.html">
     <div class="left cards">
-        <img class="tilte-img" src="/assets/dinner-picture/Bibimbap.jpg" alt="picture of Bibimbap">
+        <img class="tilte-img" src="../assets/dinner-picture/Bibimbap.jpg" alt="picture of Bibimbap">
         <h2 class="tag">Bibimbap</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/dinner-recipes/biryani.html">
+    <a class="pages" href="../Recipes/dinner-recipes/biryani.html">
     <div class="right cards">
-        <img class="tilte-img" src="/assets/dinner-picture/biryani.webp" alt="picture of biryani">
+        <img class="tilte-img" src="../assets/dinner-picture/biryani.webp" alt="picture of biryani">
         <h2 class="tag">Biryani</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/dinner-recipes/cashew-chic.html">
+    <a class="pages" href="../Recipes/dinner-recipes/cashew-chic.html">
     <div class="left cards">
-        <img class="tilte-img" src="/assets/dinner-picture/cashew chicken.webp" alt="picture of cashew chicken">
+        <img class="tilte-img" src="../assets/dinner-picture/cashew chicken.webp" alt="picture of cashew chicken">
         <h2 class="tag">cashew chicken</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/dinner-recipes/Jap-chic-curry.html">
+    <a class="pages" href="../Recipes/dinner-recipes/Jap-chic-curry.html">
     <div class="right cards">
-        <img class="tilte-img" src="/assets/dinner-picture/japanese chicken curry.webp" alt="picture of Japanese chicken curry">
+        <img class="tilte-img" src="../assets/dinner-picture/japanese chicken curry.webp" alt="picture of Japanese chicken curry">
         <h2 class="tag">Japanese chicken curry</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/dinner-recipes/katsu.html">
+    <a class="pages" href="../Recipes/dinner-recipes/katsu.html">
     <div class="left cards">
-        <img class="tilte-img" src="/assets/dinner-picture/katsu curry.jpg" alt="picture of Katsu curry">
+        <img class="tilte-img" src="../assets/dinner-picture/katsu curry.jpg" alt="picture of Katsu curry">
         <h2 class="tag">Katsu curry</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/dinner-recipes/mongolian-beef.html">
+    <a class="pages" href="../Recipes/dinner-recipes/mongolian-beef.html">
     <div class="right cards">
-        <img class="tilte-img" src="/assets/dinner-picture/Mongolian beef.jpg" alt="picture of Mongolian beef">
+        <img class="tilte-img" src="../assets/dinner-picture/Mongolian beef.jpg" alt="picture of Mongolian beef">
         <h2 class="tag">Mongolian beef</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/dinner-recipes/pad-thai.html">
+    <a class="pages" href="../Recipes/dinner-recipes/pad-thai.html">
     <div class="left cards">
-        <img class="tilte-img" src="/assets/dinner-picture/pad thai.jpg" alt="picture of Pad thai">
+        <img class="tilte-img" src="../assets/dinner-picture/pad thai.jpg" alt="picture of Pad thai">
         <h2 class="tag">Pad thai</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/dinner-recipes/shot-rib-ragu.html">
+    <a class="pages" href="../Recipes/dinner-recipes/shot-rib-ragu.html">
     <div class="right cards">
-        <img class="tilte-img" src="/assets/dinner-picture/short rib ragu.webp" alt="picture of short rib ragu">
+        <img class="tilte-img" src="../assets/dinner-picture/short rib ragu.webp" alt="picture of short rib ragu">
         <h2 class="tag">Short rib RAgu</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/dinner-recipes/tom-yum.html">
+    <a class="pages" href="../Recipes/dinner-recipes/tom-yum.html">
     <div class="left cards">
-        <img class="tilte-img" src="/assets/dinner-picture/tom yum.jpg" alt="picture of tom yum">
+        <img class="tilte-img" src="../assets/dinner-picture/tom yum.jpg" alt="picture of tom yum">
         <h2 class="tag">tom yum</h2>
     </div></a>
 
-    <a class="pages" href="/Recipes/dinner-recipes/">
+    <a class="pages" href="../Recipes/dinner-recipes/">
     <div class="right cards">
         <img class="tilte-img" src="" alt="">
         <h2 class="tag"></h2>
