corrected pathing and reorded files

--- a/Recipes/breakfast-recipes/granola.html
+++ b/Recipes/breakfast-recipes/granola.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <title>breakfast</title>
-    <link href="/styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="/assets/logo-icon/favicon.ico.png"/>
+    <link href="../../styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="../../assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
     <div class="head">
-            <img class="tilte-img" src="/assets/breakfast-pictures/Homemade granola.webp" alt="picture of granola">
+            <img class="tilte-img" src="../../assets/breakfast-pictures/Homemade granola.webp" alt="picture of granola">
             <h2 class="tag">Homemade granola</h2>
     </div>
 
