--- a/Recipes/dinner-recipes/shot-rib-ragu.html
+++ b/Recipes/dinner-recipes/shot-rib-ragu.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <title>dinner</title>
-    <link href="/styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="/assets/logo-icon/favicon.ico.png"/>
+    <link href="../../styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="../../assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
     <div class="head">
-            <img class="tilte-img" src="/assets/dinner-picture/short rib ragu.webp" alt="picture of short rib ragu">
+            <img class="tilte-img" src="../../assets/dinner-picture/short rib ragu.webp" alt="picture of short rib ragu">
             <h2 class="tag">short rib ragu</h2>
     </div>
 
