--- a/Recipes/lunch-recipes/fried-ramen.html
+++ b/Recipes/lunch-recipes/fried-ramen.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <title>lunch</title>
-    <link href="/styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="/assets/logo-icon/favicon.ico.png"/>
+    <link href="../../styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="../../assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
     <div class="head">
-            <img class="tilte-img" src="/assets/lunch-pictures/friedd  ramen noodles.webp" alt="picture of fried ramen noodles">
+            <img class="tilte-img" src="../../assets/lunch-pictures/friedd  ramen noodles.webp" alt="picture of fried ramen noodles">
             <h2 class="tag">fried ramen</h2>
     </div>
 
