--- a/Recipes/breakfast-recipes/cheese-omelette.html
+++ b/Recipes/breakfast-recipes/cheese-omelette.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <title>breakfast</title>
-    <link href="/styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="/assets/logo-icon/favicon.ico.png"/>
+    <link href="../../styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="../../assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
     <div class="head">
-            <img class="tilte-img" src="/assets/breakfast-pictures/Cheese-omelette-45155e3.webp" alt="picture of Cheese-omelette">
+            <img class="tilte-img" src="../../assets/breakfast-pictures/Cheese-omelette-45155e3.webp" alt="picture of Cheese-omelette">
             <h2 class="tag">cheese omelette</h2>
     </div>
 
