--- a/Recipes/breakfast-recipes/full-amer.html
+++ b/Recipes/breakfast-recipes/full-amer.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <title>breakfast</title>
-    <link href="/styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="/assets/logo-icon/favicon.ico.png"/>
+    <link href="../../styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="../../assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
     <div class="head">
-            <img class="tilte-img" src="/assets/breakfast-pictures/full-amer.webp" alt="picture of full Ameraican breakfast>
+            <img class="tilte-img" src="../../assets/breakfast-pictures/full-amer.webp" alt="picture of full Ameraican breakfast>
             <h2 class="tag">Full Ameraican</h2>
     </div>
 
