--- a/Recipes/dessert-recipes/milktert.html
+++ b/Recipes/dessert-recipes/milktert.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <title>dessert</title>
-    <link href="/styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="/assets/logo-icon/favicon.ico.png"/>
+    <link href="../../styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="../../assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
     <div class="head">
-            <img class="tilte-img" src="/assets/dessert-pictures/milktert.jpg" alt="picture of milktert ">
+            <img class="tilte-img" src="../../assets/dessert-pictures/milktert.jpg" alt="picture of milktert ">
             <h2 class="tag">milktert</h2>
     </div>
 
