--- a/Recipes/lunch-recipes/fettuccine-al-bur.html
+++ b/Recipes/lunch-recipes/fettuccine-al-bur.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <title>lunch</title>
-    <link href="/styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="/assets/logo-icon/favicon.ico.png"/>
+    <link href="../../styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="../../assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
     <div class="head">
-            <img class="tilte-img" src="/assets/lunch-pictures/fettuccine al-burro.webp" alt="picture of fettuccineal-burro ">
+            <img class="tilte-img" src="../../assets/lunch-pictures/fettuccine al-burro.webp" alt="picture of fettuccineal-burro ">
             <h2 class="tag">fettuccineal al-burro</h2>
     </div>
 
