--- a/Recipes/lunch-recipes/steak&eggs.html
+++ b/Recipes/lunch-recipes/steak&eggs.html
@@ -5,8 +5,8 @@
 <head>
     <meta charset="UTF-8">
     <title>lunch</title>
-    <link href="/styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="/assets/logo-icon/favicon.ico.png"/>
+    <link href="../../styles.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" href="../../assets/logo-icon/favicon.ico.png"/>
 </head>
 
 <body>
