edited files index and style

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipe Finder</title>
     <link href="styles.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="./assets/logo-icon/favicon.icon-bg.png" />
@@ -12,7 +13,8 @@
         <h1 class="heading">Recipe Frinder</h1>
     </div>
 
-    <div class="left cards">
+<div class="card-container">
+    <div class="cards">
         <a class="pages" href="./meal-cards/breakfast.html">
             <img class="tilte-img" src="./assets/breakfast-pictures/full-amer.webp" alt="picture of Breakfast" />
             <h2 class="tag">Breakfast</h2>
@@ -20,7 +22,7 @@
         </a>
     </div>
 
-    <div class="right cards">
+    <div class="cards">
         <a class="pages" href="./meal-cards/lunch.html">
             <img class="tilte-img" src="./assets/lunch-pictures/chicken burgar.webp" alt="picture of lunch burger" />
             <h2 class="tag">Lunch</h2>
@@ -28,7 +30,7 @@
         </a>
     </div>
 
-    <div class="left cards">
+    <div class="cards">
         <a class="pages" href="./meal-cards/dinner.html">
             <img class="tilte-img" src="./assets/dinner-picture/dinner.jpg" alt="dinner time pictures" />
             <h2 class="tag">Dinner</h2>
@@ -36,13 +38,14 @@
         </a>
     </div>
 
-    <div class="right cards">
+    <div class="cards">
         <a class="pages" href="./meal-cards/dessert.html">
             <img class="tilte-img" src="./assets/dessert-pictures/dessert.jpg" alt="sweet desserts picture" />
             <h2 class="tag">Dessert</h2>
             <p>Dessert is a final course, a sweet ending to a meal, and not a meal in itself.</p>
         </a>
     </div>
+</div>
     
 </body>
 </html>
