--- a/Recipes/breakfast-recipes/avocado-toast.html
+++ b/Recipes/breakfast-recipes/avocado-toast.html
@@ -9,7 +9,8 @@
     <link rel="icon" type="image/png" href="../../assets/logo-icon/favicon.icon-bg.png" />
 </head>
 
-<body class="items">
+<body>
+    
     <div class="head">
             <img class="tilte-img" src="../../assets/breakfast-pictures/Avocado-toast.webp" alt="picture of Avocado toast" />
             <h2>Avocado Toast</h2>
