--- a/index.html
+++ b/index.html
@@ -12,37 +12,40 @@
         <h1 class="heading">Recipe Frinder</h1>
     </div>
 
-    <div class="left cards">
-        <a class="pages" href="./meal-cards/breakfast.html">
+<div class="box">
+        <div class="cards">
+            <a class="pages" href="./meal-cards/breakfast.html">
             <img class="tilte-img" src="./assets/breakfast-pictures/full-amer.webp" alt="picture of Breakfast" />
             <h2 class="tag">Breakfast</h2>
             <p>The most important meal of the day</p>
-        </a>
-    </div>
+            </a>
+        </div>
 
-    <div class="right cards">
-        <a class="pages" href="./meal-cards/lunch.html">
+        <div class="cards">
+            <a class="pages" href="./meal-cards/lunch.html">
             <img class="tilte-img" src="./assets/lunch-pictures/chicken burgar.webp" alt="picture of lunch burger" />
             <h2 class="tag">Lunch</h2>
             <p>lunch is a crucial meal for providing sustained energy and nutrients throughout the day</p>
-        </a>
-    </div>
+            </a>
+        </div>
 
-    <div class="left cards">
-        <a class="pages" href="./meal-cards/dinner.html">
+        <div class="cards">
+            <a class="pages" href="./meal-cards/dinner.html">
             <img class="tilte-img" src="./assets/dinner-picture/dinner.jpg" alt="dinner time pictures" />
             <h2 class="tag">Dinner</h2>
             <p>A time to refuel before sleep</p>
-        </a>
-    </div>
+            </a>
+        </div>
 
-    <div class="right cards">
-        <a class="pages" href="./meal-cards/dessert.html">
+        <div class="cards">
+            <a class="pages" href="./meal-cards/dessert.html">
             <img class="tilte-img" src="./assets/dessert-pictures/dessert.jpg" alt="sweet desserts picture" />
             <h2 class="tag">Dessert</h2>
             <p>Dessert is a final course, a sweet ending to a meal, and not a meal in itself.</p>
-        </a>
-    </div>
-    
+            </a>
+        </div>
+
+</div>
+
 </body>
 </html>
