--- a/meal-cards/breakfast.html
+++ b/meal-cards/breakfast.html
@@ -14,65 +14,80 @@
         <h1> Breakfast </h1>
     </div>
 
-    <a class="pages" href="../Recipes/breakfast-recipes/avocado-toast.html">
-    <div class="left cards">
+    <div class="box">
+        <div class="cards">
+        <a class="pages" href="../Recipes/breakfast-recipes/avocado-toast.html">
             <img class="tilte-img" src="../assets/breakfast-pictures/Avocado-toast.webp" alt="picture of Avocado toast">
             <h2 class="tag">Avocado Toast</h2>
-    </div></a>
+        </a>
+        </div>
 
-    <a class="pages" href="../Recipes/breakfast-recipes/banana-muf.html">
-    <div class="right cards">
+
+        <div class="cards">
+        <a class="pages" href="../Recipes/breakfast-recipes/banana-muf.html">
         <img class="tilte-img" src="../assets/breakfast-pictures/banana muf.webp" alt="picture of banana muffins>">
         <h2 class="tag">Banana Muffins</h2>
-    </div></a>
+        </a>
+        </div>
 
-    <a class="pages" href="../Recipes/breakfast-recipes/breakfast-smoothie.html">
-    <div class="left cards">
+
+        <div class="cards">
+        <a class="pages" href="../Recipes/breakfast-recipes/breakfast-smoothie.html">
         <img class="tilte-img" src="../assets/breakfast-pictures/breakfast smoothie.webp" alt="picture of a breakfast smoothie">
         <h2 class="tag">Breakfast Smoothie</h2>
-    </div></a>
+        </a>
+        </div>
 
+        <div class="cards">
     <a class="pages" href="../Recipes/breakfast-recipes/egg-wrap.html">
-    <div class="right cards">
         <img class="tilte-img" src="../assets/breakfast-pictures/breakfast-egg-wraps-c0880fe.webp" alt="breakfast wrap picture">
         <h2 class="tag">Breakfast egg wraps</h2>
-    </div></a>
+    </a>
+        </div>
 
+    <div class="cards">
     <a class="pages" href="../Recipes/breakfast-recipes/cheese-omelette.html">
-    <div class="left cards">
         <img class="tilte-img" src="../assets/breakfast-pictures/Cheese-omelette-45155e3.webp" alt="picture of Chee>se-omelette">
         <h2 class="tag">Cheese Omelette</h2>
-    </div></a>
+        </a>
+    </div>
 
+    <div class="cards">
     <a class="pages" href="../Recipes/breakfast-recipes/full-amer.html">
-    <div class="right cards">
         <img class="tilte-img" src="../assets/breakfast-pictures/full-amer.webp" alt="picture of a full american breakfast ">
         <h2 class="tag">full american breakfast</h2>
-    </div></a>
+    </a>
+    </div>
 
+    <div class="cards">
     <a class="pages" href="../Recipes/breakfast-recipes/full-english.html">
-    <div class="left cards">
         <img class="tilte-img" src="../assets/breakfast-pictures/full-eng.webp" alt="picture of a full english breakfast">
         <h2 class="tag">Full english breakfast</h2>
-    </div></a>
+    </a>
+    </div>
 
+    <div class="cards">
     <a class="pages" href="../Recipes/breakfast-recipes/granola.html">
-    <div class="right cards">
         <img class="tilte-img" src="../assets/breakfast-pictures/Homemade granola.webp" alt="picture of Homemade granola">
         <h2 class="tag">homemade granola</h2>
-    </div></a>
+    </a>
+    </div>
 
+    <div class="cards">
     <a class="pages" href="../Recipes/breakfast-recipes/pancakes.html">
-    <div class="left cards">
         <img class="tilte-img" src="../assets/breakfast-pictures/pancakes.webp" alt="picture of pancakes">
         <h2 class="tag">pancakes</h2>
-    </div></a>
+    </a>
+    </div>
 
+    <div class="cards">
     <a class="pages" href="../Recipes/breakfast-recipes/french-toast.html">
-    <div class="right cards">
         <img class="tilte-img" src="../assets/breakfast-pictures/Peanut-butter-stuffed-French-toast-e119754.webp" alt="picture of peanut buttr french toast">
         <h2 class="tag">peanut butter stuffed French toast</h2>
-    </div></a>
+    </a>
+    </div>
+
+</div>
 
 </body>
 
