BangBang Salmon Recipe and image added to dinner section

--- a/meal-cards/dinner.html
+++ b/meal-cards/dinner.html
@@ -80,9 +80,9 @@
     </div>
 
     <div class="cards">    
-        <a class="pages" href="../Recipes/dinner-recipes/">
-        <img class="tilte-img" src="" alt="">
-        <h2 class="tag"></h2>
+        <a class="pages" href="../Recipes/dinner-recipes/bang-bang-salmon.html">
+        <img class="tilte-img" src="../assets/dinner-picture/BangBang Salmon.webp" alt="picture of Bang Bang Salmon">
+        <h2 class="tag">Bang Bang Salmon</h2>
         </a>
     </div>
     </div>
